fixed whitespace issue with thread content

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ color:black;
 }
 #snippetContainer{
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   justify-content: center;
   align-items: center;
 }
@@ -82,6 +82,7 @@ padding:10px;}
   border-bottom: 2px soild black;
 }
 #threadContent{
+  white-space:pre-wrap;
   padding: 20px;
   width: 70vw;
   height: auto;
